formatted search results, prevented overflow, and changed coloring

--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -21,10 +21,11 @@
     width: 100%;
     padding: 10px 15px;
     border: none;
+    margin-bottom: 6px;
     border-radius: 5px;
     background: rgba(124, 58, 237, 0.1); 
     color: white;
-    font-size: 16px;
+    font-size: 14px;
     outline: none;
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.3);
   }
@@ -35,6 +36,7 @@
   }
   
   .search-button {
+    width: 90%;
     margin-left: 10px;
     padding: 8px 12px;
     background-color: #6a0dad;
@@ -50,3 +52,10 @@
   .search-button:hover {
     background-color: #55009d;
   }
+
+  .search-results{
+    color: rgb(124, 58, 237);
+    overflow-y: auto;
+  }
+
+  
